// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changelogMd > matches snapshot 1`] = `
"# Changelog

## 1.0.0

- Initial release
"
`;

exports[`exampleRune > matches snapshot 1`] = `
"// Ready-to-run rune — runs directly from the plugin install location.
// Users activate it by adding your plugin to their project config.
//
// permissions (plugin.json):
//   use:
//     allow: []  — add patterns like fs.read:./** if you use utils.fs
//     deny:  []

export async function use(dir, args, utils) {
  // dir   — absolute path to the user's project root
  // args  — string[] passed via $example=arg1,arg2
  // utils — { md, tree, section, fs, json, shell, fetch, env, vars, rune }
  //
  // utils.section.selected()         → string[] | null — requested section patterns
  // utils.section.match(name)        → bool            — true if section is requested
  // utils.section.create(name, data) → Section         — build a section object

  return utils.section.create('example', {
    type: 'markdown',
    content: utils.md.h3('Example') + '\\n' + utils.md.ul(['Replace with real output']),
  });
}
"
`;

exports[`exampleTemplate > matches snapshot 1`] = `
"// Template rune — copied into the user's project by \`crunes template use\`.
// Edit this file to define what a new rune looks like when scaffolded from your plugin.
//
// permissions (plugin.json):
//   use:
//     allow: []  — add patterns like fs.read:./** if you use utils.fs
//     deny:  []

export async function use(dir, args, utils) {
  // dir   — absolute path to the user's project root
  // args  — string[] passed via $key=arg1,arg2
  // utils — { md, tree, section, fs, json, shell, fetch, env, vars, rune }
  //
  // utils.section.selected()         → string[] | null — requested section patterns
  // utils.section.match(name)        → bool            — true if section is requested
  // utils.section.create(name, data) → Section         — build a section object

  return utils.section.create('example', {
    type: 'markdown',
    content: utils.md.h3('Example') + '\\n' + utils.md.ul(['Replace with real output']),
  });
}
"
`;

exports[`marketplaceJson > matches snapshot 1`] = `
"{
  "format": "1",
  "name": "my-plugin",
  "description": "A test plugin",
  "owner": {
    "name": "Alice"
  },
  "plugins": [
    {
      "name": "my-plugin",
      "description": "A test plugin",
      "version": "1.0.0",
      "author": {
        "name": "Alice"
      },
      "source": "./",
      "category": "runes"
    }
  ]
}
"
`;

exports[`pluginJson > matches snapshot 1`] = `
"{
  "format": "1",
  "name": "my-plugin",
  "version": "1.0.0",
  "description": "A test plugin",
  "author": {
    "name": "Alice"
  },
  "license": "MIT",
  "keywords": [],
  "runes": {
    "example": {
      "name": "Example Rune",
      "description": "Replace with your rune description",
      "permissions": {
        "use": {
          "allow": [],
          "deny": []
        }
      }
    }
  },
  "templates": {
    "example-template": {
      "name": "Example Template",
      "description": "Replace with your template description"
    }
  }
}
"
`;

exports[`readmeMd > matches snapshot 1`] = `
"# my-plugin

A test plugin

## Installation

Add this plugin via the crunes marketplace.
"
`;
